# Student-Managment-System

./: README.md
StudentGradeChecker/: CMakeLists.txt  addstudent.cpp  addstudent.h  addstudent.ui  classes.cpp  classes.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registersubjects.cpp  registersubjects.h  registersubjects.ui  removestudent.cpp  removestudent.h  removestudent.ui  removesubject.cpp  removesubject.h  removesubject.ui  searchstudent.cpp  searchstudent.h  searchstudent.ui  subjectcalculations.cpp  subjectcalculations.h  subjectcalculations.ui
build-StudentGradeChecker-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  students.txt  subjects.txt
build-StudentGradeChecker-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: codemodel-v2-322b68b6b486072c4c2b.json  directory-.-Debug-63d6cb8be269f6225560.json  index-2023-12-30T19-58-39-0059.json  target-StudentGradeChecker-Debug-06e958dd0022c2200aae.json  target-StudentGradeChecker_autogen_timestamp_deps-Debug-5e775f491e5c00612491.json
build-StudentGradeChecker-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-20ca02c4188962b87e3a.json  cmakeFiles-v1-c208726f52cb9746027d.json  codemodel-v2-69b7f62dcb3798318471.json  directory-.-Debug-8e0443998d07eeca65ad.json  index-2023-12-30T14-03-15-0860.json  target-StudentGradeChecker-Debug-2ec023486b335c8a4784.json  target-StudentGradeChecker_autogen-Debug-d549ae4c08e6d92d9b0c.json
build-StudentGradeChecker-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-StudentGradeChecker-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-StudentGradeChecker-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QChar.19FEADB49F6147A4.idx  QSpinBox.1A35986756FB68BA.idx  QTableView.EC9F8EF803891105.idx  addstudent.cpp.7F6A3F40DFE4E0B1.idx  addstudent.h.E46632793B4B2148.idx  classes.cpp.08B0741E63B8E445.idx  classes.h.DB21548B1E68C179.idx  fstream.tcc.5CE579CBE0529742.idx  (+26 more)
build-StudentGradeChecker-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/StudentGradeChecker_autogen/: deps  mocs_compilation.cpp
build-StudentGradeChecker-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/StudentGradeChecker_autogen/EWIEGA46WW/: moc_addstudent.cpp  moc_addstudent.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_registersubjects.cpp  moc_registersubjects.cpp.d  moc_removestudent.cpp  moc_removestudent.cpp.d  moc_removesubject.cpp  moc_removesubject.cpp.d  moc_searchstudent.cpp  moc_searchstudent.cpp.d  moc_subjectcalculations.cpp  moc_subjectcalculations.cpp.d
build-StudentGradeChecker-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/StudentGradeChecker_autogen/include/: ui_addstudent.h  ui_mainwindow.h  ui_registersubjects.h  ui_removestudent.h  ui_removesubject.h  ui_searchstudent.h  ui_subjectcalculations.h
